# claude_usage_bar

./: .gitignore  CLAUDE.md  LICENSE  README.md  brew_plan.md  claude-usage.5m.py  pr_review_21.md  pyproject.toml  setup.py
.claude/: settings.json  settings.local.json
.github/workflows/: publish.yml
src/claude_usage/: __init__.py  __main__.py  api.py  app.py  attributed.py  auth.py  config.py  core.py  display.py  launch_agent.py
tests/: test_auth.py  test_display_modes.py  test_launch_agent.py
