[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "claude-usage-bar"
version = "0.1.0"
description = "macOS menu bar app showing Claude API usage limits"
requires-python = ">=3.10"
dependencies = [
    "rumps>=0.4.0",
]

[project.scripts]
claude-usage-bar = "claude_usage.app:main"

[tool.setuptools.packages.find]
where = ["src"]
