[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "claude-usage-bar"
dynamic = ["version"]
description = "macOS menu bar app showing Claude API usage limits"
readme = "README.md"
license = "MIT"
authors = [{name = "dlichtenberg"}]
requires-python = ">=3.10"
dependencies = [
    "rumps>=0.4.0,<0.5",
    "pyobjc-framework-Cocoa>=10.0",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: MacOS X",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Utilities",
]

[project.urls]
Homepage = "https://github.com/dlichtenberg/claude_usage_bar"
Repository = "https://github.com/dlichtenberg/claude_usage_bar"
"Bug Tracker" = "https://github.com/dlichtenberg/claude_usage_bar/issues"

[project.scripts]
claude-usage-bar = "claude_usage.app:main"

[tool.setuptools.dynamic]
version = {attr = "claude_usage.__version__"}

[tool.setuptools.packages.find]
where = ["src"]
